# bank2tax

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
bank2tax/app/: cli.py  main.py  settings.py  web.py
bank2tax/core/: docling_io.py  extractor.py  ollama_client.py  pipeline.py  schema.py  settings.py
