[project]
name = "bank2tax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.74.0",
    "nicegui>=3.7.1",
    "pydantic-ai-slim>=1.62.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
    "types-requests>=2.32.4.20260107",
]
